--- a/package.json
+++ b/package.json
@@ -1,18 +1,17 @@
 {
   "name": "video-processor",
   "version": "1.0.0",
-  "description": "Online Video Processor",
-  "main": "src/main.jsx",
   "scripts": {
-    "build": "chmod +x ./node_modules/.bin/vite && vite build"
+    "build": "vite build",
+    "dev": "vite"
   },
   "dependencies": {
-    "@ffmpeg/ffmpeg": "^0.12.15",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "@ffmpeg/ffmpeg": "^0.11.6",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.0.0",
-    "vite": "^4.5.14"
+    "vite": "^4.5.14",
+    "@vitejs/plugin-react": "^3.1.0"
   }
 }
