--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "video-processor",
   "version": "1.0.0",
   "scripts": {
-    "build": "vite build",
-    "dev": "vite"
+    "build": "npx vite build",
+    "dev": "npx vite",
+    "vercel-build": "npx vite build"
   },
   "dependencies": {
     "@ffmpeg/ffmpeg": "^0.11.6",
