--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,11 @@
   "builds": [
     {
       "src": "package.json",
-      "use": "@vercel/node"
+      "use": "@vercel/node",
+      "config": {
+        "maxLambdaSize": "50mb",
+        "runtime": "nodejs18.x"
+      }
     }
   ],
   "routes": [
@@ -14,5 +18,8 @@
   ],
   "env": {
     "NPM_CONFIG_PRODUCTION": "false"
-  }
+  },
+  "buildCommand": "chmod +x node_modules/.bin/vite && npx vite build",
+  "installCommand": "npm install && chmod -R 755 node_modules/.bin",
+  "devCommand": "npx vite"
 }
