--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "video-processor",
   "version": "1.0.0",
   "scripts": {
-    "build": "chmod -R 755 node_modules/.bin && npx vite build",
-    "dev": "chmod -R 755 node_modules/.bin && npx vite",
-    "vercel-build": "chmod -R 755 node_modules/.bin && npx vite build",
-    "postinstall": "chmod -R 755 node_modules/.bin"
+    "build": "npx vite build",
+    "dev": "npx vite",
+    "vercel-build": "npx vite build"
   },
   "dependencies": {
     "@ffmpeg/ffmpeg": "^0.11.6",
@@ -15,5 +14,8 @@
   "devDependencies": {
     "@vitejs/plugin-react": "^3.1.0",
     "vite": "^4.5.14"
+  },
+  "engines": {
+    "node": ">=18.18.0"
   }
 }
