--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
   "builds": [
     {
       "src": "package.json",
-      "use": "@vercel/static",
+      "use": "@vercel/static-build",
       "config": {
         "distDir": "dist"
       }
