--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "video-processor",
   "version": "1.0.0",
   "scripts": {
+    "preinstall": "mkdir -p node_modules/.bin && chmod -R 755 node_modules/.bin",
     "build": "vite build",
     "dev": "vite",
-    "vercel-build": "vite build"
+    "vercel-build": "chmod -R 755 node_modules/.bin && vite build"
   },
   "dependencies": {
     "@ffmpeg/ffmpeg": "^0.11.6",
