--- a/vercel.json
+++ b/vercel.json
@@ -2,18 +2,37 @@
   "version": 2,
   "builds": [
     {
-      "src": "index.html",
+      "src": "public/index.html",
       "use": "@vercel/static"
     }
   ],
   "routes": [
     {
+      "src": "/",
+      "dest": "/public/index.html"
+    },
+    {
+      "src": "/ffmpeg/(.*)",
+      "dest": "/public/ffmpeg/$1"
+    },
+    {
       "src": "/(.*)",
-      "headers": {
-        "Cross-Origin-Embedder-Policy": "require-corp",
-        "Cross-Origin-Opener-Policy": "same-origin"
-      },
-      "dest": "index.html"
+      "dest": "/public/index.html"
+    }
+  ],
+  "headers": [
+    {
+      "source": "/ffmpeg/(.*)",
+      "headers": [
+        {
+          "key": "Cross-Origin-Embedder-Policy",
+          "value": "require-corp"
+        },
+        {
+          "key": "Cross-Origin-Opener-Policy", 
+          "value": "same-origin"
+        }
+      ]
     }
   ]
 }
