--- a/vercel.json
+++ b/vercel.json
@@ -6,18 +6,18 @@
       "use": "@vercel/static"
     }
   ],
-  "routes": [
+  "rewrites": [
     {
-      "src": "/",
-      "dest": "/public/index.html"
+      "source": "/",
+      "destination": "/public/index.html"
     },
     {
-      "src": "/ffmpeg/(.*)",
-      "dest": "/public/ffmpeg/$1"
+      "source": "/ffmpeg/(.*)",
+      "destination": "/public/ffmpeg/$1"
     },
     {
-      "src": "/(.*)",
-      "dest": "/public/index.html"
+      "source": "/(.*)",
+      "destination": "/public/index.html"
     }
   ],
   "headers": [
