--- a/vercel.json
+++ b/vercel.json
@@ -22,7 +22,7 @@
   ],
   "headers": [
     {
-      "source": "/ffmpeg/(.*)",
+      "source": "/(.*)",
       "headers": [
         {
           "key": "Cross-Origin-Embedder-Policy",
@@ -31,6 +31,10 @@
         {
           "key": "Cross-Origin-Opener-Policy", 
           "value": "same-origin"
+        },
+        {
+          "key": "X-Frame-Options",
+          "value": "SAMEORIGIN"
         }
       ]
     }
